--- a/autor.html
+++ b/autor.html
@@ -7,7 +7,7 @@
 		<title>Borrador del CONTENIDO HTML</title>
 
 	</head>
-			<h1>Ovi Diseños de Sitios Web- Contenido HTML</h1>
+			<h1>Ovi Diseï¿½os de Sitios Web- Contenido HTML</h1>
 	<body bgcolor=#005883>
 		
 		<br>
@@ -21,9 +21,9 @@
 
 			</ul>
 			<br><br>
-			<h1>Realizado por: Yany Gomez Rodriguez</h1>
+			<h1>Realizado por: Yany Gomez Rodriguez DE ARDILA</h1>
 			<p>Codigo.1115739851</p>
-			<p>Diseño de sitios Web </p>
+			<p>Diseï¿½o de sitios Web </p>
 			<p>Numero de Grupo:301122_90 </p>
 			<p>Email: yanygomez28@gmail.com </p>
 			<p>Skype: YanyGomez </p>
