--- a/inicio.html
+++ b/inicio.html
@@ -35,7 +35,7 @@
                 <nav class "navegacion">
 
                         <ul class "menu">
-                                <li><a href="#"> Inicio yany</a></li>
+                                <li><a href="#"> Inicio gomez</a></li>
                                 <li><a href="#"> Conceptos</a></li>
                                 <li><a href="#"> Recursos</a></li>
                                 <li><a href="#"> Autoevaluacion</a>
@@ -52,7 +52,7 @@
                         </ul>
                 </nav>
 
-    <center><h1 >xxxxxxxyhBienvenidos</h1></center>
+    <center><h1 >Bienvenidos</h1></center>
     <center><h1 >La UNAD esta de moda, Conócenos. </h1></center>
 
 
