--- a/inicio.html
+++ b/inicio.html
@@ -35,7 +35,7 @@
                 <nav class "navegacion">
 
                         <ul class "menu">
-                                <li><a href="#"> Inicio gomez</a></li>
+                                <li><a href="#"> Inicio gomez rodriguez</a></li>
                                 <li><a href="#"> Conceptos</a></li>
                                 <li><a href="#"> Recursos</a></li>
                                 <li><a href="#"> Autoevaluacion</a>
