--- a/inicio.html
+++ b/inicio.html
@@ -35,10 +35,10 @@
                 <nav class "navegacion">
 
                         <ul class "menu">
-                                <li><a href="#"> Inicio.</a></li>
-                                <li><a href="#"> Conceptos</a></li>
-                                <li><a href="#"> Recursos</a></li>
-                                <li><a href="#"> Autoevaluacion</a>
+                                <li><a href="inicio.html"> Inicio.</a></li>
+                                <li><a href="concepto1.html"> Conceptos</a></li>
+                                <li><a href="recursos.html"> Recursos</a></li>
+                                <li><a href="autoevaluacion.html"> Autoevaluacion</a>
                                         <ul class "submenu"> 
                                                 <li><a href="#"> Servicio #1</a></li>
                                                 <li><a href="#"> Servicio #2</a></li>
@@ -46,7 +46,7 @@
         
                                         </ul>
                                 </li>
-                                <li><a href="#"> Autor</a></li>
+                                <li><a href="autor.html"> Autor</a></li>
                                 
 
                         </ul>
