--- a/autor.html
+++ b/autor.html
@@ -16,7 +16,7 @@
      </<header>
 
     
-	   /* <center><h1 class="titulo"> Autor </h1></center>  */
+	    <center><h1 class="titulo"> Autor </h1></center>  
 	   
   
 
