--- a/inicio.html
+++ b/inicio.html
@@ -35,7 +35,7 @@
                 <nav class "navegacion">
 
                         <ul class "menu">
-                                <li><a href="inicio.html"> Inicio.</a></li>
+                                <li><a href="inicio.html"> Inicio</a></li>
                                 <li><a href="concepto1.html"> Conceptos</a></li>
                                 <li><a href="recursos.html"> Recursos</a></li>
                                 <li><a href="autoevaluacion.html"> Autoevaluacion</a>
