--- a/inicio.html
+++ b/inicio.html
@@ -35,7 +35,7 @@
                 <nav class "navegacion">
 
                         <ul class "menu">
-                                <li><a href="inicio.html"> Inicio</a></li>
+                                <li><a href="inicio.html"> Inicio.</a></li>
                                 <li><a href="concepto1.html"> Conceptos</a></li>
                                 <li><a href="recursos.html"> Recursos</a></li>
                                 <li><a href="autoevaluacion.html"> Autoevaluacion</a>
@@ -77,7 +77,7 @@
 
             <aside>
                    <center>
-                      <blockquote class="twitter-tweet"><p lang="es" dir="ltr"><a href="https://twitter.com/hashtag/Educaci%C3%B3nyDesarrollo?src=hash&amp;ref_src=twsrc%5Etfw">#EducaciónyDesarrollo</a> Un adelanto de lo que será nuestro programa de todos los viernes en compañía de Gloria Herrera, Directora de la Zona Occidente de la UNAD.<br> <br>Por <a href="https://twitter.com/InstitucionalTV?ref_src=twsrc%5Etfw">@InstitucionalTV</a> ✔️ <a href="https://t.co/cvMzKUfNWh">pic.twitter.com/cvMzKUfNWh</a></p>&mdash; Universidad UNAD (@UniversidadUNAD) <a href="https://twitter.com/UniversidadUNAD/status/1324439483509624832?ref_src=twsrc%5Etfw">November 5, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <iframe width="795" height="690" frameborder="0" src="https://es.educaplay.com/juego/7862151-test_ovi.html"></iframe>
                     </center>
             </aside>
 
