--- a/autoevaluacion2.html
+++ b/autoevaluacion2.html
@@ -36,7 +36,7 @@
 
     <aside>
            <center>
-              <blockquote class=<iframe <iframe width="795" height="690" frameborder="0" src="https://es.educaplay.com/juego/7862151-test_ovi.html"></iframe>
+            <iframe width="795" height="690" frameborder="0" src="https://es.educaplay.com/juego/7862151-test_ovi.html"></iframe>
             </center>
     </aside>
 
