--- a/inicio.html
+++ b/inicio.html
@@ -22,8 +22,8 @@
                         <li><a href="recursos.html"> Recursos</a></li>
                         <li><a href="autoevaluacion.html"> Autoevaluacion</a>
                                 <ul class "submenu"> 
-                                        <li><a href="autoevaluacion2.html"> Servicio #1</a></li>
-                                        <li><a href="#"> Servicio #2</a></li>
+                                        <li><a href="autoevaluacion2.html"> Evaluacion </a></li>
+                                        <li><a href="matriz.html"> Autoevaluacion</a></li>
 
                                 </ul>
                         </li>
