--- a/inicio.html
+++ b/inicio.html
@@ -42,8 +42,8 @@
                 <li><a href="recursos.html"> Recursos</a></li>
                 <li><a href="autoevaluacion.html"> Autoevaluacion</a>
                         <ul class submenu> 
-                                <li><a href="autoevaluacion2.html"> Evaluacion</a></li>
-                                <li><a href="matriz.html"> Matriz</a></li>
+                                <li><a href="autoevaluacion2.html"> Evaluacion 2</a></li>
+                                <li><a href="matriz.html"> Evaluación Sitio</a></li>
                         </ul>
                 </li>
                 <li><a href="autor.html"> Autor</a></li>
