--- a/inicio.html
+++ b/inicio.html
@@ -13,10 +13,7 @@
 <body>
     <header width=100%>
         <center> <img src="Encabezado.PNG" alt="Encabezado"> </center>
-
-        
      </<header>
-
    
             <center><h1 class="titulo"> DISEÑOS DE SITIOS WEB </h1></center>
   
@@ -35,8 +32,8 @@
             </table>
     </div> -->
 
-    <nav class navegacion>
-        <ul class menu>
+    <nav>
+        <div  class="enlaces uno" id="enlaces">
                 <li><a href="inicio.html"> Inicio.</a></li>
                 <li><a href="concepto1.html"> Conceptos</a></li>
                 <li><a href="recursos.html"> Recursos</a></li>
@@ -47,7 +44,7 @@
                         </ul>
                 </li>
                 <li><a href="autor.html"> Autor</a></li>
-        </ul>
+        </div>
       </nav>
                
     <center><h1 >Bienvenidos</h1></center>
