--- a/inicio.html
+++ b/inicio.html
@@ -13,6 +13,20 @@
 <body>
     <header width=100%>
         <center> <img src="Encabezado.PNG" alt="Encabezado"> </center>
+        <nav>
+                <div  class="enlaces uno" id="enlaces">
+                        <a href="inicio.html"> Inicio.</a>
+                        <a href="concepto1.html"> Conceptos</a>
+                        <a href="recursos.html"> Recursos</a>
+                        <a href="autoevaluacion.html"> Autoevaluacion</a>
+                                <ul class= "enlaces dos" id="enlacesdos"> 
+                                        <a href="autoevaluacion2.html"> Evaluacion 2</a>
+                                        <a href="matriz.html"> Evaluación Sitio</a>
+                                </ul>
+                        </li>
+                        <li><a href="autor.html"> Autor</a></li>
+                </div>
+              </nav>
      </<header>
    
             <center><h1 class="titulo"> DISEÑOS DE SITIOS WEB </h1></center>
@@ -32,20 +46,7 @@
             </table>
     </div> -->
 
-    <nav>
-        <div  class="enlaces uno" id="enlaces">
-                <li><a href="inicio.html"> Inicio.</a></li>
-                <li><a href="concepto1.html"> Conceptos</a></li>
-                <li><a href="recursos.html"> Recursos</a></li>
-                <li><a href="autoevaluacion.html"> Autoevaluacion</a>
-                        <ul class submenu> 
-                                <li><a href="autoevaluacion2.html"> Evaluacion 2</a></li>
-                                <li><a href="matriz.html"> Evaluación Sitio</a></li>
-                        </ul>
-                </li>
-                <li><a href="autor.html"> Autor</a></li>
-        </div>
-      </nav>
+    
                
     <center><h1 >Bienvenidos</h1></center>
     <center><h1 >La UNAD esta de moda, Conócenos. </h1></center>
