--- a/inicio.html
+++ b/inicio.html
@@ -19,7 +19,7 @@
                         <a href="concepto1.html"> Conceptos</a>
                         <a href="recursos.html"> Recursos</a>
                         <a href="autoevaluacion.html"> Autoevaluacion</a>
-                                <ul class= "enlaces dos" id="enlacesdos"> 
+                                <ul class= submenu> 
                                         <a href="autoevaluacion2.html"> Evaluacion 2</a>
                                         <a href="matriz.html"> Evaluación Sitio</a>
                                 </ul>
