--- a/inicio.html
+++ b/inicio.html
@@ -13,23 +13,26 @@
 <body>
     <header width=100%>
         <center> <img src="Encabezado.PNG" alt="Encabezado"> </center>
+        <br>
+        <center><h1 class="titulo"> DISEÑOS DE SITIOS WEB </h1></center>
+        <br>
         <nav>
                 <div  class="enlaces uno" id="enlaces">
                         <a href="inicio.html"> Inicio.</a>
                         <a href="concepto1.html"> Conceptos</a>
                         <a href="recursos.html"> Recursos</a>
                         <a href="autoevaluacion.html"> Autoevaluacion</a>
-                                <ul class= submenu> 
+                                <ul class="enlaces uno" id="submenu"> 
                                         <a href="autoevaluacion2.html"> Evaluacion 2</a>
                                         <a href="matriz.html"> Evaluación Sitio</a>
                                 </ul>
                         </li>
-                        <li><a href="autor.html"> Autor</a></li>
+                        <a href="autor.html"> Autor</a>
                 </div>
               </nav>
      </<header>
    
-            <center><h1 class="titulo"> DISEÑOS DE SITIOS WEB </h1></center>
+           
   
 
     <!-- <div class=menu>
