--- a/inicio.html
+++ b/inicio.html
@@ -22,10 +22,10 @@
                         <a href="concepto1.html"> Conceptos</a>
                         <a href="recursos.html"> Recursos</a>
                         <a href="autoevaluacion.html"> Autoevaluacion</a>
-                                <ul class="enlaces uno" id="submenu"> 
+                                <!-- <ul class="enlaces uno" id="submenu"> 
                                         <a href="autoevaluacion2.html"> Evaluacion 2</a>
                                         <a href="matriz.html"> Evaluación Sitio</a>
-                                </ul>
+                                </ul> -->
                         </li>
                         <a href="autor.html"> Autor</a>
                 </div>
