--- a/inicio.html
+++ b/inicio.html
@@ -14,7 +14,7 @@
     <header width=100%>
         <center> <img src="Encabezado.PNG" alt="Encabezado"> </center>
         <br>
-        <center><h1 class="titulo"> DISEÑOS DE SITIOS WEB </h1></center>
+        <center><h1 class="titulo"> DISEÑOS DE SITIOS WEB yany gomez</h1></center>
         <br>
         <nav>
                 <div  class="enlaces uno" id="enlaces">
