--- a/matriz.html
+++ b/matriz.html
@@ -36,7 +36,7 @@
 
     <aside>
            <center>
-           <iframe src ="Matriz-EvalSite_YanyGomez"></iframe>
+           <iframe src ="Matriz-EvalSite_YanyGomez.pdf" width="70%" height="500px"></iframe>
             </center>
     </aside>
 
