--- a/inicio.html
+++ b/inicio.html
@@ -18,7 +18,7 @@
         <br>
         <nav>
                 <div  class="enlaces uno" id="enlaces">
-                        <li><a href="inicio.html"> Inicio.</a></li>
+                        <li><a href="inicio.html"> Inicio</a></li>
                         <li><a href="concepto1.html"> Conceptos</a></li>
                         <li><a href="recursos.html"> Recursos</a></li>
                         <li> <a href="autoevaluacion.html"> Autoevaluacion</a>
