--- a/inicio.html
+++ b/inicio.html
@@ -21,7 +21,7 @@
                         <li><a href="inicio.html"> Inicio</a></li>
                         <li><a href="concepto1.html"> Conceptos</a></li>
                         <li><a href="recursos.html"> Recursos</a></li>
-                        <li></li><a href="autor.html"> Autor</a></li>
+                        <li><a href="autor.html"> Autor</a></li>
                         <li> <a href="autoevaluacion.html"> Autoevaluacion</a>
                                 <ul>
                                        <li><a href="autoevaluacion2.html"> Evaluacion 2</a></li>
