--- a/concepto1.html
+++ b/concepto1.html
@@ -34,18 +34,18 @@
     </div>
 
 				<center><h2>Lenguajes de programacion HTML y CSS</h2></center>
-				<ul>Has oido hablar de HTML y CSS, ¿tiene esto que ver con el funcionamiento de sitios web? ¡Por Vsupuesto! Estos son los lenguajes de programación que permiten crear sitios web. Todos los sitios web se basan en estos lenguajes, que son la base de los sitios de internet. HTML fue inventado por Tim Berners-Lee en 1991, quien todavía sigue de cerca la evolución de la Web. Creó el World Wide Web Consortium (W3C), que define las nuevas versiones de internet relacionadas con los.lenguajes de programación También ha creado más recientemente, la Fundación World Wide Web, que hace el seguimiento y análisis de la evolución de la Web.</ul>	
+				<ul>Has oido hablar de HTML y CSS, contiene esto que ver con el funcionamiento de sitios web? Por Vsupuesto! Estos son los lenguajes de programacion que permiten crear sitios web. Todos los sitios web se basan en estos lenguajes, que son la base de los sitios de internet. HTML fue inventado por Tim Berners-Lee en 1991, quien todavia sigue de cerca la evolucion de la Web. Creo el World Wide Web Consortium (W3C), que define las nuevas versiones de internet relacionadas con los.lenguajes de programacion Tambien ha creado mas recientemente, la Fundacion World Wide Web, que hace el seguimiento y analisis de la evolucion de la Web.</ul>	
 		<BR>
-				<h3>HTML y CSS: dos lenguajes para la creación de un sitio web	</h3>
-				<p>Para crear un sitio web, debes dar instrucciones al ordenador. No basta con escribir el texto que se ha incluido en el sitio (como lo haría en un procesador de textos), también se debe indicar dónde colocar este texto, insertar imágenes, crear enlaces entre páginas, etc.	</p>
+				<h3>HTML y CSS: dos lenguajes para la creacion de un sitio web	</h3>
+				<p>Para crear un sitio web, debes dar instrucciones al ordenador. No basta con escribir el texto que se ha incluido en el sitio (como lo hara en un procesador de textos), tambien se debe indicar donde colocar este texto, insertar imagenes, crear enlaces entre paginas, etc.	</p>
 				
 				<BR>
 				<h3>Las funciones de HTML y CSS	</h3>
-				<p> HTML (HyperText Markup Language): apareció por primera vez en 1991 en el lanzamiento de la Web. Su función es la gestión y organización del contenido. Así que en HTML puedes escribir lo que deseas mostrar en la página: texto, enlaces, imágenes …	</p>
-				<p> CSS (Cascading Style Sheets, también conocidas como hojas de estilo): su papel es gestionar la apariencia de la página web (diseño, posicionamiento, colores, tamaño de texto ...). Este lenguaje ha complementado el código HTML desde 1996.	</p>
+				<p> HTML (HyperText Markup Language): aparecio por primera vez en 1991 en el lanzamiento de la Web. Su funcion es la gestion y organizacion del contenido. Asi que en HTML puedes escribir lo que deseas mostrar en la pagina: texto, enlaces, imagenes 	</p>
+				<p> CSS (Cascading Style Sheets, tambion conocidas como hojas de estilo): su papel es gestionar la apariencia de la pagina web (diseÃ±o, posicionamiento, colores, tamapo de texto ...). Este lenguaje ha complementado el codigo HTML desde 1996.	</p>
 				<BR>
 
-				<h2>Función</h2>
+				<h2>Funcion</h2>
 			<p>El Lenguaje de Marcado de Hipertexto (HTML) es el codigo que se utiliza para estructurar y desplegar una pagina web y sus contenidos </p>
 			<p>Para el desarrollo de sitios web, Html maneja: </p>
 
@@ -54,7 +54,7 @@
 					<li> El elemento de HTML section representa una seccion generica de un documento. Sirve para determinar que contenido corresponde a que parte de un esquema.</li>
 					<br>
 					<li>Notas de Uso:</li>
-					<p> Si la intencion es indicar el contenido de un elemento section , es mejor usar el elemento article en su lugar, a modo de articulos independientes como en las revistas. section esta diseñado para contenidos dependientes, pero diferenciados.</p>
+					<p> Si la intencion es indicar el contenido de un elemento section , es mejor usar el elemento article en su lugar, a modo de articulos independientes como en las revistas. section esta diseÃ±ado para contenidos dependientes, pero diferenciados.</p>
 					<li>Ejemplo:</li>
 					<img src="section2.PNG" alt="Ejemplo">
 				</ul>
@@ -92,7 +92,7 @@
 		
 
 				<h3> biografia </h3>
-					<p>Desarrollo Aplicaciones Web. Rafael Menéndez-Barzanallana Asensio. DIS. UMU. Lenguajes de programación HTML y CSS.Recuperadp de:	https://www.um.es/docencia/barzana/DAWEB/Lenguaje-de-programacion-HTML-1.pdf	</p>
+					<p>Desarrollo Aplicaciones Web. Rafael Mendndez-Barzanallana Asensio. DIS. UMU. Lenguajes de programaciï¿½n HTML y CSS.Recuperadp de:	https://www.um.es/docencia/barzana/DAWEB/Lenguaje-de-programacion-HTML-1.pdf	</p>
 					<p>Developer.mozilla.Recuperado de:https://developer.mozilla.org/es/docs/Web/HTML/Elemento/aside </p>
 	</body>
 </html>
